Fix modal not working when page overflows

--- a/style.css
+++ b/style.css
@@ -9,13 +9,20 @@
   --light-red: #ff6b6b;
 }
 
+body {
+  display: grid;
+  grid-template-rows: minmax(1fr, 10rem) 9fr;
+  min-height: 100vh;
+}
+
 .modal {
-  position: absolute;
+  grid-area: 1 / 1 / -1 / -1;
+  position: fixed;
   display: none;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
+  height: 100%;
   background: rgb(0, 0, 0, 0.5);
 }
 
@@ -59,12 +66,6 @@
 
 .book-form button {
   justify-self: center;
-}
-
-body {
-  display: grid;
-  grid-template-rows: 1fr 9fr;
-  min-height: 100vh;
 }
 
 header {
